# slur_counter_bot

./: Cargo.toml  NOTES.txt
src/: main.rs
